# max_bot

./: .gitignore  LICENSE  README.md  config.properties.example  max_api.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
max_bot/: __init__.py  bot.py  client.py
max_bot/dispatcher/: dispatcher.py
max_bot/polling/: polling.py
max_bot/types/: callback.py  message.py
