[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaxbot"
version = "0.1.1"
description = "Python SDK for MAX messenger bot API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "httpx"
]

[project.urls]
Homepage = "https://github.com/svkurick/max_bot"
Repository = "https://github.com/svkurick/max_bot"
Issues = "https://github.com/svkurick/max_bot/issues"